@@ -95,24 +95,24 @@ public:
     return 0;
   };
 
-  void* getMemoryBlock(ACE_TCHAR* block_name, unsigned int block_size)
+  void* getMemoryBlock(char* block_name, unsigned int block_size)
   {
     void* shared;
 
-    ACE_DEBUG((LM_INFO, ACE_TEXT("errno = %d. Looking for a Shared Memory block named %s\n"),
+    ACE_DEBUG((LM_INFO, ACE_TEXT("errno = %d. Looking for a Shared Memory block named %C\n"),
                         ACE_OS::last_error(),
                         block_name));
 
     if (c_memory_pool->find(block_name, shared) == 0)
     {
       // An existing block was found, so take that:
-      ACE_DEBUG((LM_INFO, ACE_TEXT("Shared Memory block %s was found."),
+      ACE_DEBUG((LM_INFO, ACE_TEXT("Shared Memory block %C was found."),
                           block_name));
     }
     else
     {
       // Allocate the memory and bind it to a name:
-      ACE_DEBUG((LM_INFO, ACE_TEXT("Shared Memory block %s was not found. errno = %d. Trying to allocate new block\n"),
+      ACE_DEBUG((LM_INFO, ACE_TEXT("Shared Memory block %C was not found. errno = %d. Trying to allocate new block\n"),
                           block_name,
                           ACE_OS::last_error()));
       shared = c_memory_pool->malloc(block_size);
@@ -122,11 +122,11 @@ public:
                             ACE_OS::last_error()));
         return (void*)(-1);
       }
-      ACE_DEBUG((LM_INFO, ACE_TEXT("New Shared Memory block was allocated, trying to bind it to the name %s\n"),
+      ACE_DEBUG((LM_INFO, ACE_TEXT("New Shared Memory block was allocated, trying to bind it to the name %C\n"),
                           block_name));
       if (c_memory_pool->bind(block_name, shared) < 0)
       {
-        ACE_DEBUG((LM_INFO, ACE_TEXT("New Shared Memory block could not be bound to the name %s. errno = %d.\n"),
+        ACE_DEBUG((LM_INFO, ACE_TEXT("New Shared Memory block could not be bound to the name %C. errno = %d.\n"),
                             block_name,
                             ACE_OS::last_error()));
 
@@ -153,7 +153,7 @@ run_main (int argc, ACE_TCHAR * argv[])
   bool no_crash = (argc>1 && argv[1][0]=='1');
   ShmemMan* smm = ShmemMan::getInstance (no_crash);
 
-  void* buf = smm->getMemoryBlock (ACE_TEXT("block_1"), 10 * 4096);
+  void* buf = smm->getMemoryBlock ("block_1", 10 * 4096);
 
   ACE_DEBUG((LM_INFO, ACE_TEXT("allocated shmem block at %@\n"), buf));
 
